WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242866
REGRESSION(
252551@main
) ASSERTION FAILED: isEventDispatchAllowedInSubtree(*this) in BaseDateAndTimeInputType::createShadowSubtree
https://bugs.webkit.org/show_bug.cgi?id=242866
Summary
REGRESSION(252551@main) ASSERTION FAILED: isEventDispatchAllowedInSubtree(*th...
Fujii Hironori
Reported
2022-07-18 13:19:30 PDT
REGRESSION(
252551@main-252554@main
?) ASSERTION FAILED: ScriptDisallowedScope::InMainThread::isEventDispatchAllowedInSubtree(*this) in WebCore::Node::dispatchSubtreeModifiedEvent() iOS tester bot is exiting early. Buildbot: builder Apple-iOS-15-Simulator-Debug-WK2-Tests build 3170
https://build.webkit.org/#/builders/267/builds/3170
ASSERTION FAILED: ScriptDisallowedScope::InMainThread::isEventDispatchAllowedInSubtree(*this) dom/Node.cpp(2412) : void WebCore::Node::dispatchSubtreeModifiedEvent() 1 0x30549bd59 WTFCrash 2 0x30549bd79 WTFCrashWithSecurityImplication 3 0x331e80590 WebCore::Node::dispatchSubtreeModifiedEvent() 4 0x331d9b0f5 WebCore::Element::didAddAttribute(WebCore::QualifiedName const&, WTF::AtomString const&) 5 0x331d9b010 WebCore::Element::addAttributeInternal(WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::Element::SynchronizationOfLazyAttribute) 6 0x331d9295c WebCore::Element::setAttributeInternal(unsigned int, WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::Element::SynchronizationOfLazyAttribute) 7 0x331d92e42 WebCore::Element::setAttributeWithoutSynchronization(WebCore::QualifiedName const&, WTF::AtomString const&) 8 0x331d9d9f4 WebCore::Element::setPseudo(WTF::AtomString const&) 9 0x33214c594 WebCore::BaseDateAndTimeInputType::createShadowSubtree() 10 0x33232dcb3 WebCore::InputType::createShadowSubtreeIfNeeded() 11 0x3322252b8 WebCore::HTMLInputElement::updateUserAgentShadowTree() 12 0x331ca730d WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 13 0x331ca83e9 WebCore::Document::updateStyleIfNeeded() 14 0x331cc58e6 WebCore::Document::finishedParsing() 15 0x332490288 WebCore::HTMLConstructionSite::finishedParsing() 16 0x3324d6540 WebCore::HTMLTreeBuilder::finished() 17 0x33249e243 WebCore::HTMLDocumentParser::end() 18 0x33249c0d1 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() 19 0x33249be09 WebCore::HTMLDocumentParser::prepareToStopParsing() 20 0x33249cbf7 WebCore::HTMLDocumentParser::endIfDelayed() 21 0x33249e610 WebCore::HTMLDocumentParser::resumeParsingAfterScriptExecution() 22 0x33249e99c WebCore::HTMLDocumentParser::notifyFinished(WebCore::PendingScript&) 23 0x331e9f61a WebCore::PendingScript::notifyClientFinished() 24 0x331e9f679 WebCore::PendingScript::notifyFinished(WebCore::LoadableScript&) 25 0x331e3b9dc WebCore::LoadableScript::notifyClientFinished() 26 0x331e3b752 WebCore::LoadableClassicScript::notifyFinished(WebCore::CachedResource&, WebCore::NetworkLoadMetrics const&) 27 0x332ae7538 WebCore::CachedResource::checkNotify(WebCore::NetworkLoadMetrics const&) 28 0x332ada914 WebCore::CachedResource::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) 29 0x332b2f292 WebCore::CachedScript::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) 30 0x332a59a1b WebCore::SubresourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) 31 0x2e8771c06 WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&) com.apple.WebKit.WebContent.Development terminated (pid 31469) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2022-07-18 13:25:36 PDT
252551@main
(
bug#242348
) seems to be a culprit.
Ryosuke Niwa
Comment 2
2022-07-18 13:28:22 PDT
Oh oops, I missed that.
Ryosuke Niwa
Comment 3
2022-07-18 13:33:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2519
EWS
Comment 4
2022-07-18 13:47:39 PDT
Committed
252576@main
(d992e35e2e9d): <
https://commits.webkit.org/252576@main
> Reviewed commits have been landed. Closing PR #2519 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2022-07-18 13:48:15 PDT
<
rdar://problem/97217794
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug