REGRESSION(252551@main) ASSERTION FAILED: isEventDispatchAllowedInSubtree(*this) in BaseDateAndTimeInputType::createShadowSubtree https://bugs.webkit.org/show_bug.cgi?id=242866

Reviewed by Alan Bujtas and Wenson Hsieh.

The assertion failure was caused by setPseudo call in BaseDateAndTimeInputType::createShadowSubtree()
on a newly created div element. Append the div to the container element with EventAllowedScope first
before setting an attribute to allow this mutation without an assertion failure.

* Source/WebCore/html/BaseDateAndTimeInputType.cpp:
(WebCore::BaseDateAndTimeInputType::createShadowSubtree):

Canonical link: https://commits.webkit.org/252576@main